optimize guild dropdowns

--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -64,6 +64,12 @@
                 font-weight: bold
 
 
+.dropdown-container
+    background-color: rgba(black, 0.2)
+    padding: 20px
+    border-radius: 10px
+
+
 .scoreboard-container
     @media only screen and (min-width: 1650px)
         display: block
