--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -1,29 +1,37 @@
 <!-- @format -->
 
 <app-protip uid="logincommand">
-  You can use the <a class="embedded link" href="/commands#login" target="_blank">sp!login</a> command 
-  to log in to the web interface without logging in to your browser
-  with Discord.<br />
+  You can use the
+  <a class="embedded link" href="/commands#login" target="_blank">sp!login</a>
+  command to log in to the web interface without logging in to your browser with
+  Discord.<br />
   <br />
-  But before, you need to enable this feature <a class="link" href="/usersettings#ota">here</a>.
+  But before, you need to enable this feature
+  <a class="link" href="/usersettings#ota">here</a>.
 </app-protip>
 
 <div class="mt-4">
   <app-spinner id="spinner-load-guilds" [started]="true"></app-spinner>
-  <div class="guilds-list-container">
-    <a
-      *ngFor="let g of guilds"
-      class="guild-container"
-      routerLink="/guilds/{{ g.id }}"
-    >
-      <div class="guild-tn">
-        <img [src]="g.icon_url | discordAsset:'/assets/dc-logo.svg':256:(!!g.icon)" />
-      </div>
-      <div class="info-container">
-        <h1 [title]="g.name">{{ g.name }}</h1>
-        <span>{{ g.member_count }} members</span>
-      </div>
-    </a>
+  <div class="d-flex">
+    <div class="guilds-list-container">
+      <a
+        *ngFor="let g of guilds"
+        class="guild-container"
+        routerLink="/guilds/{{ g.id }}"
+      >
+        <div class="guild-tn">
+          <img
+            [src]="
+              g.icon_url | discordAsset: '/assets/dc-logo.svg':256:!!g.icon
+            "
+          />
+        </div>
+        <div class="info-container">
+          <h1 [title]="g.name">{{ g.name }}</h1>
+          <span>{{ g.member_count }} members</span>
+        </div>
+      </a>
+    </div>
   </div>
 
   <div *ngIf="inviteSettings" class="no-guilds">
@@ -43,7 +51,13 @@
         >
           <div class="guild-tn">
             <img
-              [src]="inviteSettings.guild.icon_url | discordAsset:'/assets/dc-logo.svg':512:(!!inviteSettings.guild.icon)"
+              [src]="
+                inviteSettings.guild.icon_url
+                  | discordAsset
+                    : '/assets/dc-logo.svg'
+                    : 512
+                    : !!inviteSettings.guild.icon
+              "
             />
           </div>
           <div class="info-container">
