--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -11,26 +11,36 @@
 </app-protip>
 
 <div class="mt-4">
-  <app-spinner id="spinner-load-guilds" [started]="true"></app-spinner>
   <div class="d-flex">
     <div class="guilds-list-container">
-      <a
-        *ngFor="let g of guilds"
-        class="guild-container"
-        routerLink="/guilds/{{ g.id }}"
-      >
-        <div class="guild-tn">
-          <img
-            [src]="
-              g.icon_url | discordAsset: '/assets/dc-logo.svg':256:!!g.icon
-            "
-          />
-        </div>
-        <div class="info-container">
-          <h1 [title]="g.name">{{ g.name }}</h1>
-          <span>{{ g.member_count }} members</span>
-        </div>
-      </a>
+      <ng-template [ngIf]="!guilds">
+        <app-skeleton-tile
+          *ngFor="let i of [0, 1, 2, 3, 4, 5, 6]"
+          height="330px"
+          width="250px"
+          margin="0px 10px 20px 10px"
+          delay="0.{{ i }}s"
+        ></app-skeleton-tile>
+      </ng-template>
+      <ng-template [ngIf]="guilds">
+        <a
+          *ngFor="let g of guilds"
+          class="guild-container"
+          routerLink="/guilds/{{ g.id }}"
+        >
+          <div class="guild-tn">
+            <img
+              [src]="
+                g.icon_url | discordAsset: '/assets/dc-logo.svg':256:!!g.icon
+              "
+            />
+          </div>
+          <div class="info-container">
+            <h1 [title]="g.name">{{ g.name }}</h1>
+            <span>{{ g.member_count }} members</span>
+          </div>
+        </a>
+      </ng-template>
     </div>
   </div>
 
