--- a/web/src/app/routes/guild-admin/general/ga-general.component.html
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.html
@@ -1,6 +1,19 @@
 <app-guild-admin-navbar></app-guild-admin-navbar>
 <div class="guild-settings-container">
-  <app-spinner *ngIf="!settings" [started]="true"></app-spinner>
+  <div *ngIf="!settings">
+    <app-skeleton-tile
+      *ngFor="let i of [0, 1, 2, 3, 4, 5]"
+      height="88px"
+      margin="0 0 10px 0"
+      delay="{{ i * 0.05 }}s"
+    ></app-skeleton-tile>
+    <app-skeleton-tile
+      height="50px"
+      width="150px"
+      delay="{{ 6 * 0.05 }}s"
+      margin="20px 0 0 0"
+    ></app-skeleton-tile>
+  </div>
   <div *ngIf="settings">
     <div
       *ngIf="guildSettingsContains('sp.guild.config.prefix')"
