--- a/web/src/app/routes/guild-admin/karma/ga-karma.component.html
+++ b/web/src/app/routes/guild-admin/karma/ga-karma.component.html
@@ -1,7 +1,40 @@
 <app-guild-admin-navbar></app-guild-admin-navbar>
 <div class="guild-settings-container">
   <div>
-    <app-spinner *ngIf="!karmaSettings" [started]="true"></app-spinner>
+    <div *ngIf="!karmaSettings">
+      <app-skeleton-tile height="44px" margin="0 0 20px 0"></app-skeleton-tile>
+      <app-skeleton-tile
+        height="153px"
+        margin="0 0 20px 0"
+        delay="0.05s"
+      ></app-skeleton-tile>
+      <app-skeleton-tile
+        height="110px"
+        margin="0 0 20px 0"
+        delay="0.1s"
+      ></app-skeleton-tile>
+      <app-skeleton-tile
+        height="110px"
+        margin="0 0 40px 0"
+        delay="0.15s"
+      ></app-skeleton-tile>
+      <app-skeleton-tile
+        height="44px"
+        width="75px"
+        delay="0.2s"
+        margin="0 0 40px 0"
+      ></app-skeleton-tile>
+      <app-skeleton-tile
+        height="33px"
+        delay="0.25s"
+        margin="0 0 10px 0"
+      ></app-skeleton-tile>
+      <app-skeleton-tile
+        height="33px"
+        delay="0.25s"
+        margin="0 0 10px 0"
+      ></app-skeleton-tile>
+    </div>
     <div *ngIf="karmaSettings">
       <app-slider [(ngModel)]="karmaSettings.state"
         >Karma-System enabled</app-slider
