--- a/web/src/app/routes/guild-admin/general/ga-general.component.html
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.html
@@ -40,22 +40,14 @@
     >
       <h5>Autorole</h5>
       <div>
-        <select
-          [(ngModel)]="settings.autorole"
-          (input)="updatedSettings.autorole = getSelectedValue($event)"
-        >
-          <option *ngFor="let r of guild.roles" [ngValue]="r.id">
-            {{ r.name }}
-          </option>
-        </select>
-        <button
-          (click)="
-            settings.autorole = '__RESET__';
-            updatedSettings.autorole = '__RESET__'
-          "
-        >
-          RESET
-        </button>
+        <app-tags
+          [available]="guild.roles"
+          [formatter]="roleNameFormatter"
+          [filter]="roleInputFilter"
+          placeholder="role name"
+          [(ngModel)]="autoRoles"
+        ></app-tags>
+        <button (click)="autoRoles = []">RESET</button>
       </div>
     </div>
     <div
