fix general guild settings button sizing

--- a/web/src/app/routes/guild-admin/general/ga-general.component.html
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.html
@@ -38,7 +38,7 @@
       *ngIf="guildSettingsContains('sp.guild.config.autorole')"
       class="settings-tile"
     >
-      <h5>Autorole</h5>
+      <h5>Autoroles</h5>
       <div>
         <app-tags
           [available]="guild.roles"
