--- a/web/src/app/routes/guild-admin/general/ga-general.component.scss
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.scss
@@ -20,6 +20,7 @@
     padding: 5px 15px;
     margin-left: auto;
     margin-right: 0px;
+    height: fit-content;
   }
 
   @media screen and (max-width: 750px) {
