--- a/web/src/app/components/tagsinput/tagsinput.component.scss
+++ b/web/src/app/components/tagsinput/tagsinput.component.scss
@@ -20,10 +20,16 @@ $c-tags: $c-blurple;
   background-color: $c-tags;
   border-radius: 5px;
   margin: 10px 10px 0px 0px;
+  display: flex;
+  align-items: center;
 
   img {
     width: 1em;
     height: 1em;
-    margin-left: 5px;
+    margin-left: 7px;
+  }
+
+  &.invalid {
+    background-color: $c-red;
   }
 }
