update guildsettings endpoint validation [#147]

--- a/web/src/app/routes/guild-admin/general/ga-general.component.html
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.html
@@ -44,6 +44,7 @@
           [available]="guild.roles"
           [formatter]="roleNameFormatter"
           [filter]="roleInputFilter"
+          [invalidFilter]="roleInvalidFilter"
           placeholder="role name"
           [(ngModel)]="autoRoles"
         ></app-tags>
