--- a/web/src/sass/vars.scss
+++ b/web/src/sass/vars.scss
@@ -5,6 +5,7 @@ $c-darkbnb: #202020;
 $c-nqblack: #171717;
 $c-red: #ed4245;
 $c-orange: #f57c00;
+$c-yellow: #fbc02d;
 $c-green: #43a047;
 $c-lime: #57f287;
 $c-cyan: #03a9f4;
