--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -19,3 +19,16 @@
     width: 100%;
   }
 }
+
+#search-bar-container {
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0 0 0 / 50%);
+}
