--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -1,3 +1,8 @@
+<app-protip uid="globalsearch" [delay]="4000">
+  If you are looking for a specific guild or user, <br />
+  try pressing <span class="embedded">CTRL + F</span>. 🕵️
+</app-protip>
+
 <div>
   <ng-template #modalRevoke let-modal>
     <div class="modal-header">
