--- a/web/src/app/components/global-search/global-search.component.html
+++ b/web/src/app/components/global-search/global-search.component.html
@@ -6,36 +6,42 @@
     placeholder="Search ..."
     autofocus
   />
-  <div *ngIf="lastResult?.guilds?.length > 0" class="result-container">
-    <h5>Guilds</h5>
-    <div
-      *ngFor="let g of lastResult.guilds"
-      class="tile"
-      (click)="nav('guilds', g.id)"
-    >
-      <img [src]="g.icon_url" />
-      <div>
-        <p>{{ g.name }}</p>
-        <p class="small">{{ g.id }}</p>
+  <div class="result-container">
+    <div *ngIf="lastResult?.guilds?.length > 0">
+      <h5>Guilds</h5>
+      <div
+        *ngFor="let g of lastResult.guilds"
+        class="tile"
+        (click)="nav('guilds', g.id)"
+      >
+        <img [src]="g.icon_url" />
+        <div>
+          <p>{{ g.name }}</p>
+          <p class="small">{{ g.id }}</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div *ngIf="lastResult?.members?.length > 0" class="result-container">
-    <h5>Members</h5>
-    <div
-      *ngFor="let m of lastResult.members"
-      class="tile"
-      (click)="nav('guilds', m.guild_id, m.user.id)"
-    >
-      <img [src]="m.avatar_url" />
-      <div>
-        <p>
-          {{ m.nick ? m.nick : m.user.username }} @ {{ m.guild_name }}
-          <span class="small">({{ m.guild_id }})</span>
-        </p>
-        <p class="small">
-          {{ m.user.username }}#{{ m.user.discriminator }} ({{ m.user.id }})
-        </p>
+    <div *ngIf="lastResult?.members?.length > 0">
+      <h5>Members</h5>
+      <div
+        *ngFor="
+          let m of lastResult.members
+            .concat(lastResult.members)
+            .concat(lastResult.members)
+        "
+        class="tile"
+        (click)="nav('guilds', m.guild_id, m.user.id)"
+      >
+        <img [src]="m.avatar_url" />
+        <div>
+          <p>
+            {{ m.nick ? m.nick : m.user.username }} @ {{ m.guild_name }}
+            <span class="small">({{ m.guild_id }})</span>
+          </p>
+          <p class="small">
+            {{ m.user.username }}#{{ m.user.discriminator }} ({{ m.user.id }})
+          </p>
+        </div>
       </div>
     </div>
   </div>
