--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -6,20 +6,22 @@
 >
   <app-global-search (navigate)="onSearchNavigate($event)"></app-global-search>
 </div>
-<div id="toasts-container">
-  <app-toast
-    *ngFor="let t of toasts.toasts"
-    [heading]="t.heading"
-    [color]="t.type"
-    [delay]="t.delay"
-    [closable]="t.closable"
-    (hidden)="toasts.remove(t)"
-  >
-    {{ t.text }}
-  </app-toast>
-</div>
-<div id="router-outlet">
-  <div class="content">
-    <router-outlet></router-outlet>
+<div class="transition" [class.blur]="isSearch">
+  <div id="toasts-container">
+    <app-toast
+      *ngFor="let t of toasts.toasts"
+      [heading]="t.heading"
+      [color]="t.type"
+      [delay]="t.delay"
+      [closable]="t.closable"
+      (hidden)="toasts.remove(t)"
+    >
+      {{ t.text }}
+    </app-toast>
+  </div>
+  <div id="router-outlet">
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
