remove debug stuff

--- a/web/src/app/components/global-search/global-search.component.html
+++ b/web/src/app/components/global-search/global-search.component.html
@@ -25,11 +25,7 @@
     <div *ngIf="lastResult?.members?.length > 0">
       <h5>Members</h5>
       <div
-        *ngFor="
-          let m of lastResult.members
-            .concat(lastResult.members)
-            .concat(lastResult.members)
-        "
+        *ngFor="let m of lastResult.members"
         class="tile"
         (click)="nav('guilds', m.guild_id, m.user.id)"
       >
