--- a/web/src/app/routes/debug/debug.component.scss
+++ b/web/src/app/routes/debug/debug.component.scss
@@ -3,6 +3,10 @@
 
 input {
   border-bottom: solid 2px white;
+}
+
+button,
+input {
   display: block;
 }
 
@@ -12,4 +16,11 @@ input {
   margin-top: 20px;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+
+  > * {
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
