fix global search [#273]

--- a/web/src/app/components/global-search/global-search.component.html
+++ b/web/src/app/components/global-search/global-search.component.html
@@ -48,5 +48,13 @@
         </div>
       </div>
     </div>
+    <i
+      *ngIf="
+        lastResult &&
+        lastResult.guilds.length === 0 &&
+        lastResult.members.length === 0
+      "
+      >No results found.</i
+    >
   </div>
 </div>
