--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,7 +1,7 @@
 @import 'sass/vars';
 @import 'sass/mixins';
 
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@700&display=swap');
 
