use monospace font for json editor [#275]

--- a/web/src/app/routes/utils/embeds/embeds.component.scss
+++ b/web/src/app/routes/utils/embeds/embeds.component.scss
@@ -191,6 +191,8 @@ label {
   > textarea {
     width: 100%;
     height: 1000px;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 12px;
   }
 
   .error {
