fixed typos and language mistakes

--- a/web/src/app/routes/guild-admin/data/ga-data.component.html
+++ b/web/src/app/routes/guild-admin/data/ga-data.component.html
@@ -17,7 +17,7 @@
       <li>Permission Specifications</li>
       <li>Tags</li>
       <li>Antiraid Settings and Joinlog</li>
-      <li>Unbran Requests</li>
+      <li>Unban Requests</li>
     </ul>
     <i class="small">This action can only be performed once every 24 hours.</i>
     <div class="delete-container mt-4">
@@ -53,7 +53,7 @@
       <li>Permission Specifications</li>
       <li>Tags</li>
       <li>Antiraid Settings and Joinlog</li>
-      <li>Unbran Requests</li>
+      <li>Unban Requests</li>
     </ul>
     <p>
       Please enter the guild name below to confirm.<br />
