--- a/web/src/app/routes/guild-admin/general/ga-general.component.html
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.html
@@ -154,7 +154,7 @@
       <h5>Leave Message</h5>
       <i>
         You can use <span class="embedded">[user]</span> to display the name or
-        <span class="embedded">[ment]</span> to mention the left user.
+        <span class="embedded">[ment]</span> to mention the user who left the guild.
       </i>
       <div class="mt-3">
         <select
