--- a/web/src/app/routes/guild-admin/karma/ga-karma.component.html
+++ b/web/src/app/routes/guild-admin/karma/ga-karma.component.html
@@ -66,7 +66,7 @@
       <div class="mt-2">
         <label for="i-tokens"
           ><i class="small"
-            >The ammount of up and downvotes a user can perform per hour.</i
+            >The amount of up and downvotes a user can perform per hour.</i
           ></label
         >
         <input
@@ -81,7 +81,7 @@
       <div class="mt-2">
         <label for="i-tokens"
           ><i class="small"
-            >When enabled, every karma decrease is payed with 1 karma point of
+            >When enabled, every karma decrease is paid with 1 karma point of
             the executors own karma account.</i
           ></label
         >
