--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -2,7 +2,7 @@
 
 <app-protip uid="logincommand">
   You can use the
-  <a class="embedded link" href="/commands#login" target="_blank">sp!login</a>
+  <a class="embedded link" href="/commands#login" target="_blank">/login</a>
   command to log in to the web interface without logging in to your browser with
   Discord.<br />
   <br />
