--- a/web/src/app/routes/guild/guild.component.scss
+++ b/web/src/app/routes/guild/guild.component.scss
@@ -313,6 +313,16 @@
   margin-right: 0px !important;
 }
 
+.btn-utilities {
+  display: flex;
+  align-items: center;
+  > img {
+    height: 1.2em;
+    width: 1.2em;
+    margin-right: 10px;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   #user-info {
     height: fit-content;
