use /users endpoint for report user resolution

--- a/web/src/app/components/report/report.component.html
+++ b/web/src/app/components/report/report.component.html
@@ -9,9 +9,7 @@
         <div *ngIf="executor; else executorid" class="d-flex">
           <img class="avi" [src]="executor?.avatar_url | discordAsset: '':32" />
           <div>
-            <p>
-              {{ executor?.user.username }}#{{ executor?.user.discriminator }}
-            </p>
+            <p>{{ executor?.username }}#{{ executor?.discriminator }}</p>
             <p class="small">{{ report.executor_id }}</p>
           </div>
         </div>
@@ -24,7 +22,7 @@
         <div *ngIf="victim; else victimid" class="d-flex">
           <img class="avi" [src]="victim?.avatar_url | discordAsset: '':32" />
           <div>
-            <p>{{ victim?.user.username }}#{{ victim?.user.discriminator }}</p>
+            <p>{{ victim?.username }}#{{ victim?.discriminator }}</p>
             <p class="small">{{ report.victim_id }}</p>
           </div>
         </div>
