--- a/web/src/app/routes/guild-admin/data/ga-data.component.html
+++ b/web/src/app/routes/guild-admin/data/ga-data.component.html
@@ -3,7 +3,7 @@
   <div>
     <h3>Data Removal</h3>
     <p class="mt-4">
-      Here you can delete <strong>ALL</strong> data stored in shinpurus database
+      Here you can delete <strong>ALL</strong> data stored in shinpuru's database
       and object storage associated to this guild.<br />
       This includes the following data sets:
     </p>
