--- a/web/src/app/components/protip/protip.component.scss
+++ b/web/src/app/components/protip/protip.component.scss
@@ -12,9 +12,11 @@
   opacity: 0;
   cursor: pointer;
   transition: opacity 0.5s ease;
+  pointer-events: none;
 
   &.show {
     opacity: 1;
+    pointer-events: all;
   }
 
   > .header {
