add verification web view [#323]

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -45,12 +45,7 @@
 
   <ng-template #tmpLogin>
     <div class="d-flex ml-auto">
-      <a (click)="onLogin()">
-        <button class="btn-login">
-          <img height="14" class="mr-2" src="/assets/dc-logo.svg" />
-          <span>LOGIN</span>
-        </button>
-      </a>
+      <app-login-button></app-login-button>
     </div>
   </ng-template>
 </div>
