and beta info and change info [#323]

--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.html
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.html
@@ -9,6 +9,7 @@
       >
         <img src="/assets/{{ r.icon }}" />
         <span class="content">{{ r.displayname }}</span>
+        <span *ngIf="r.beta" class="beta-tag">beta</span>
       </div>
     </div>
   </div>
