--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.scss
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.scss
@@ -55,7 +55,7 @@
         > img {
           margin-right: 0;
         }
-        > .content {
+        > span {
           display: none;
         }
       }
@@ -65,4 +65,14 @@
 
 .active {
   background-color: rgba($c-blurple, 0.5) !important;
+}
+
+.beta-tag {
+  color: $c-orange;
+  text-transform: uppercase;
+  font-size: 0.6em;
+  padding: 0px 5px;
+  margin-left: 10px;
+  border: solid 1px $c-orange;
+  border-radius: 100px;
 }
