add antiraid verification bindings [#323]

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -249,3 +249,13 @@ textarea {
 .secondary {
   opacity: 0.75;
 }
+
+.beta-tag {
+  color: $c-orange;
+  text-transform: uppercase;
+  font-size: 0.6em;
+  padding: 0px 5px;
+  margin-left: 10px;
+  border: solid 1px $c-orange;
+  border-radius: 100px;
+}
