--- a/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
+++ b/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
@@ -98,7 +98,20 @@
       />
     </div>
 
-    <div class="mt-5">
+    <div class="mt-4 mw">
+      Enable User Verification<span class="beta-tag">beta</span><br />
+      <i class="small"
+        >When enabled, the user verification will be enabled automatically when
+        the antiraid system triggers.
+      </i>
+      <div class="mt-2">
+        <app-slider [(ngModel)]="antiraidSettings.verification"
+          >Enable</app-slider
+        >
+      </div>
+    </div>
+
+    <div class="mt-3">
       <button (click)="onSave()">SAVE</button>
     </div>
 
