add skeleton loader and empty info for unbanrequests

--- a/web/src/app/routes/guild-unbanrequests/guild-unbanrequests.component.scss
+++ b/web/src/app/routes/guild-unbanrequests/guild-unbanrequests.component.scss
@@ -7,3 +7,9 @@
   background-color: rgba(0, 0, 0, 0.4);
   color: white;
 }
+
+.empty-list {
+  text-align: center;
+  margin-top: 20vh;
+  opacity: 0.6;
+}
